fixing header overlapping

--- a/ynot-server/y-frontend/src/styles/Header.css
+++ b/ynot-server/y-frontend/src/styles/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px 4px 20px;
+  padding: 0 20px 0 20px;
   background-color: #fff;
   border-bottom: 1px solid #e9e9ed;
   height: 70px;
