--- a/ynot-server/y-frontend/src/styles/styles.css
+++ b/ynot-server/y-frontend/src/styles/styles.css
@@ -5,7 +5,7 @@
 }
 
 main {
-  padding: 20px;
+  padding: 70px;
 }
 
 .search-and-register {
